--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 [submodule "regRefData"]
 	path = regRefData
 	shallow = true
-	url = git@magrathea.mni.thm.de:2019-schoelzel-inada-ref.git
+	url = git@github.com:CSchoel/inamo-ref.git
