--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - wget -q http://build.openmodelica.org/apt/openmodelica.asc -O- | sudo apt-key add -
   - sudo apt update
   - sudo apt install openmodelica
-  - julia -e 'using Pkg; Pkg.add("OMJulia")'
+  - julia -e 'using Pkg; Pkg.add("OMJulia"); Pkg.add("CSV")'
 
 script:
   # sometimes ZMQ freezes on sending the message quit() to omc
