--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,12 +13,13 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
-    - name: Install python requirements
-      run: python -m pip install -r requirements.txt
+    # the following would be required if we wanted to create plots
+    # - name: Set up Python ${{ matrix.python-version }}
+    #   uses: actions/setup-python@v2
+    #   with:
+    #     python-version: 3.7
+    # - name: Install python requirements
+    #   run: python -m pip install -r requirements.txt
     - name: Install Julia
       uses: julia-actions/setup-julia@v1
       with:
