--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,9 +16,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
+      # source: https://stackoverflow.com/a/58178121
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: Create archive
         run: |
-          zip -r inamo-${GITHUB_REF#refs/*/}.zip . -x .git\* regRefData/.git\*
+          zip -r inamo-${RELEASE_VERSION}.zip . -x .git\* regRefData/.git\*
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -37,6 +40,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # reference previous output
-          asset_path: ./inamo-${GITHUB_REF#refs/*/}.zip
-          asset_name: inamo-${GITHUB_REF#refs/*/}.zip
+          asset_path: ./inamo-${RELEASE_VERSION}.zip
+          asset_name: inamo-${RELEASE_VERSION}.zip
           asset_content_type: application/zip
