--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # reference previous output
-          asset_path: ./inamo-${RELEASE_VERSION}.zip
-          asset_name: inamo-${RELEASE_VERSION}.zip
+          asset_path: ./inamo-${{ env.RELEASE_VERSION }}.zip
+          asset_name: inamo-${{ env.RELEASE_VERSION }}.zip
           asset_content_type: application/zip
