adds step to GHA workflow to extract changelog for release version

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,16 @@ jobs:
       - name: Create archive
         run: |
           zip -r inamo-${RELEASE_VERSION}.zip . -x .git\* regRefData/.git\*
+      - name: Extract changelog for release version
+        # explanation of sed command:
+        # 1. select lines between those starting with `## [x.y.z]` and `## `
+        # 2. invert this selection
+        # 3. delete it
+        # => only selection is remaining in stream
+        run: |
+          cp RELEASE_HEAD.md RELEASE.md
+          printf "\n" >> RELEASE.md
+          sed -e "/^## \\[${RELEASE_VERSION:1}\\]/,/^## / ! d" CHANGELOG.md | head -n -2 >> RELEASE.md
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -30,7 +40,7 @@ jobs:
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
-          body_path: README.md
+          body_path: RELEASE.md
           draft: true
           prerelease: false
       - name: Upload Release Asset
