disables building docs in main build script

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,7 @@ jobs:
         julia --project=docs/ -e 'using Pkg; Pkg.instantiate()'
     - name: Run unit tests
       run: julia --project=. scripts/unittests.jl
-    - name: Create and deploy docs
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: julia --project=docs/ docs/make.jl
+    # - name: Create and deploy docs
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #   run: julia --project=docs/ docs/make.jl
