--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,6 +25,6 @@ jobs:
         julia --project=docs/ -e 'using Pkg; Pkg.instantiate()'
     - name: Create and deploy docs
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
       run: julia --project=docs/ docs/make.jl
