--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: Create archive
         run: |
-          zip -r inamo-${RELEASE_VERSION}.zip . -x .git\* regRefData/.git\*
+          zip -r inamo-${RELEASE_VERSION}.zip . -x \*.git/\* \*.git
       - name: Extract changelog for release version
         # explanation of sed command:
         # 1. select lines between those starting with `## [x.y.z]` and `## `
