--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,7 +19,7 @@ jobs:
         for deb in deb deb-src; do echo "$deb http://build.openmodelica.org/apt `lsb_release -cs` nightly"; done | sudo tee /etc/apt/sources.list.d/openmodelica.list
         wget -q http://build.openmodelica.org/apt/openmodelica.asc -O- | sudo apt-key add -
         sudo apt-get update
-        sudo apt-get install openmodelica suitesparse
+        sudo apt-get install openmodelica libsuitesparse-dev
     - name: Install Julia requirements
       run: |
         export PYTHON=""
