--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,11 +26,9 @@ jobs:
       with:
         version: 1.5
     - name: Install OpenModelica
-      run: |
-        for deb in deb deb-src; do echo "$deb http://build.openmodelica.org/apt `lsb_release -cs` release"; done | sudo tee /etc/apt/sources.list.d/openmodelica.list
-        wget -q http://build.openmodelica.org/apt/openmodelica.asc -O- | sudo apt-key add -
-        sudo apt-get update
-        sudo apt-get install openmodelica
+      uses: THM-MoTE/setup-openmodelica@v1
+      with:
+        version: 1.17.0
     - name: Install Julia requirements
       run: |
         export PYTHON=""
