--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,9 +7,26 @@ on:
 name: Create Release
 
 jobs:
-  build:
+  build-fmu:
+    name: Build FMU
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install OpenModelica
+        uses: THM-MoTE/setup-openmodelica@v1
+        with:
+          version: 1.17.0
+      - name: Run FMU script
+        run: |
+          cd scripts
+          omc dist_fmu.mos
+      - uses: actions/cache@v2
+        key: fmu
+        path: out/InaMo.Examples.FullCell.AllCells.fmu
+  release:
     name: Create Release
     runs-on: ubuntu-latest
+    needs: [build-fmu]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -42,7 +59,7 @@ jobs:
           body_path: RELEASE.md
           draft: true
           prerelease: false
-      - name: Upload Release Asset
+      - name: Upload Release ZIP
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
@@ -51,4 +68,18 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # reference previous output
           asset_path: ./inamo-${{ env.RELEASE_VERSION }}.zip
           asset_name: inamo-${{ env.RELEASE_VERSION }}.zip
+          asset_content_type: application/zip
+      - name: Get chached FMUs
+        uses: actions/cache@v2
+        key: fmu
+        path: out/InaMo.Examples.FullCell.AllCells.fmu
+      - name: Upload FMUs
+        id: upload-fmu
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # reference previous output
+          asset_path: out/InaMo.Examples.FullCell.AllCells.fmu
+          asset_name: AllCells.fmu
           asset_content_type: application/zip
