--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,9 @@ jobs:
           cd scripts
           omc dist_fmu.mos
       - uses: actions/cache@v2
-        key: fmu
-        path: out/InaMo.Examples.FullCell.AllCells.fmu
+        with:
+          key: fmu
+          path: out/InaMo.Examples.FullCell.AllCells.fmu
   release:
     name: Create Release
     runs-on: ubuntu-latest
@@ -72,8 +73,9 @@ jobs:
           asset_content_type: application/zip
       - name: Get chached FMUs
         uses: actions/cache@v2
-        key: fmu
-        path: out/InaMo.Examples.FullCell.AllCells.fmu
+        with:
+          key: fmu
+          path: out/InaMo.Examples.FullCell.AllCells.fmu
       - name: Upload FMUs
         id: upload-fmu
         uses: actions/upload-release-asset@v1
