--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,8 +29,8 @@ jobs:
       uses: THM-MoTE/setup-openmodelica@v1
       with:
         version: 1.17.0
-      run:
-        apt install omlib-modelica-3.2.3
+    - name: Install Modelica standard library
+      run: apt install omlib-modelica-3.2.3
     - name: Install Julia requirements
       run: |
         export PYTHON=""
