--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,8 @@ jobs:
         uses: THM-MoTE/setup-openmodelica@v1
         with:
           version: 1.17.0
+      - name: Install Modelica standard library
+        run: sudo apt-get install omlib-modelica-3.2.3
       - name: Run FMU script
         run: |
           cd scripts
