--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,38 +2,38 @@ name: Run tests
 
 on:
   push:
-    branches: [ main ]
-    tags: 'v*'
+    branches: [main]
+    tags: "v*"
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: true
-    # the following would be required if we wanted to create plots
-    # - name: Set up Python ${{ matrix.python-version }}
-    #   uses: actions/setup-python@v2
-    #   with:
-    #     python-version: 3.7
-    # - name: Install python requirements
-    #   run: python -m pip install -r requirements.txt
-    - name: Install Julia
-      uses: julia-actions/setup-julia@v1
-      with:
-        version: 1.6
-    - name: Install OpenModelica
-      uses: THM-MoTE/setup-openmodelica@v1
-      with:
-        version: 1.17.0
-    - name: Install Modelica standard library
-      run: sudo apt-get install omlib-modelica-3.2.3
-    - name: Install Julia requirements
-      run: |
-        export PYTHON=""
-        julia --project=. -e 'using Pkg; Pkg.instantiate()'
-    - name: Run unit tests
-      run: julia --project=. scripts/unittests.jl
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
+      # the following would be required if we wanted to create plots
+      # - name: Set up Python ${{ matrix.python-version }}
+      #   uses: actions/setup-python@v2
+      #   with:
+      #     python-version: 3.7
+      # - name: Install python requirements
+      #   run: python -m pip install -r requirements.txt
+      - name: Install Julia
+        uses: julia-actions/setup-julia@v1
+        with:
+          version: 1.6
+      - name: Install OpenModelica
+        uses: THM-MoTE/setup-openmodelica@v1
+        with:
+          version: 1.17.0
+      - name: Install Modelica standard library
+        run: sudo apt-get install omlib-modelica-3.2.3
+      - name: Install Julia requirements
+        run: |
+          export PYTHON=""
+          julia --project=. -e 'using Pkg; Pkg.instantiate()'
+      - name: Run unit tests
+        run: julia --project=. scripts/unittests.jl
